Adjust code to reflect that `vpd()` was moved from `rSFSW2` to `rSW2data`
- see rSW2data commit 699ec3fdeb6f1087e40da9c46d5edf72a6d57766

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
 Suggests:
     modifiedmk,
     reshape2,
+    rSW2data,
     rSW2funs,
     zoo,
     testthat (>= 3.0),
@@ -29,6 +30,7 @@ Suggests:
     covr
 Remotes:
     github::DrylandEcology/rSW2utils,
+    github::DrylandEcology/rSW2data,
     github::DrylandEcology/rSW2funs,
     github::DrylandEcology/rSOILWAT2
 License: GPL-3
