Make handling of soil layers more fault tolerant
- previously, calculating a metric requiring soil information failed if provided soil depths and actually simulated soil layers disagreed (e.g., because rSOILWAT2 inputs were not saved and soil depths are estimates from rSFSW2 input spreadsheets)
- function `calc_soillayer_weights()` gained new argument `n_slyrs_has` (the number of simulated soil layers): the weights are returned for simulated soil layers only
- new function `determine_used_soillayers()` with the same arguments as `calc_soillayer_weights()`: determine soil layers requested for a calculation while accounting for simulated soil layers; useful if soil layer weights are not needed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(calc_soillayer_weights)
 export(check_soillayer_availability)
+export(determine_used_soillayers)
 export(extract_metrics)
 export(list_all_input_collectors)
 export(list_all_metrics)
