--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Depends:
 Imports:
     rSOILWAT2,
     rSW2utils,
+    memoise (>= 2.0.0),
     parallel,
     foreach (>= 1.5.0),
     doParallel (>= 1.0.7)
