Project parameters gain `make_short_run_names`
So far the code assumed that rSFSW2 run names consisted of "Number_Treatment_SiteLabel" where "_" was uniquely used to separate "number", "treatment", and "sitelabel" but would not be used within. This commit offers tools to loosen this restriction:
- `make_short_run_names` is a new project parameter that defaults to the new function `shorten_run_names()` -- that works as the code did before; however, this now allows the user to specify how a rSFSW2 run name would be shortened for output:
* the defaults of `make_short_run_names <- rSW2metrics::shorten_run_names` would turn "Number_Treatment_SiteLabel" into "SiteLabel"
* a situation that requires "Number_Treatment1_Treatment2_SiteLabel" to turn into "SiteLabel" could be accomplished with
  `make_short_run_names <- function(x) rSW2metrics::shorten_run_names(run_names = x, N_discard = 3)`
* a situation that needs to use the full names could be accomplished with ``make_short_run_names <- function(x) x`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(list_soil_variables)
 export(mean_cv)
 export(mean_cv_trend)
 export(process_arguments)
+export(shorten_run_names)
 exportPattern("^collect_input_[^\\.]")
 exportPattern("^metric_[^\\.]")
 import(methods)
