--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,9 @@ Remotes:
     github::DrylandEcology/rSW2data,
     github::DrylandEcology/rSW2funs,
     github::DrylandEcology/rSOILWAT2
+LinkingTo:
+    cpp11
+SystemRequirements: C++11
 License: GPL-3
 URL: https://github.com/DrylandEcology/rSW2metrics
 BugReports: https://github.com/DrylandEcology/rSW2metrics/issues
