--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,4 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
+useDynLib(rSW2metrics, .registration = TRUE)
